--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.6",
     "@clerk/themes": "^2.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-alert-dialog": "1.0.4",
+    "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-tooltip": "1.0.7",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.8",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
+    "clsx": "2.1.1",
     "eslint": "^8.53.0",
     "mongodb": "^6.5.0",
     "next": "^14.2.3",
